name:                nonce
version:             1.0.7
synopsis:            Generate cryptographic nonces.
homepage:            https://github.com/prowdsponsor/nonce
license:             BSD3
license-file:        LICENSE
author:              Felipe Lessa <felipe.lessa@prowdsponsor.com>
maintainer:          Prowdsponsor <opensource@prowdsponsor.com>
copyright:           (c) 2014 Prowdsponsor
category:            Cryptography
build-type:          Simple
cabal-version:       >= 1.10
description:
  According to the Wikipedia, a nonce is an arbitrary number used
  only once in a cryptographic communication.  This package
  contain helper functions for generating nonces.
  .
  There are many kinds of nonces used in different situations.
  It's not guaranteed that by using the nonces from this package
  you won't have any security issues.  Please make sure that the
  nonces generated via this package are usable on your design.

tested-with:
    GHC==9.14.1, GHC==9.12.2, GHC==9.10.2, GHC==9.8.4, GHC==9.6.7
      , GHC==9.4.8, GHC==9.2.8, GHC==9.0.2, GHC==8.10.7, GHC==8.8.4
      , GHC==8.6.5, GHC==8.4.4, GHC==8.2.2

source-repository head
  type:     git
  location: https://github.com/prowdsponsor/nonce

library
  exposed-modules:
    Crypto.Nonce
  build-depends:
      base              >= 4.5   && < 5
    , base64-bytestring >= 1.0   && < 1.3
    , bytestring        >= 0.9   && < 0.13
    , text              >= 0.9   && < 2.2
    , entropy           >= 0.3.7 && < 0.4.2
    , unliftio          < 0.3
    , unliftio-core     < 0.3
  hs-source-dirs: src/
  default-language: Haskell2010
  ghc-options: -Wall
  default-extensions:
    DeriveDataTypeable
